[gd_scene load_steps=3 format=3 uid="uid://bgve32n1ks53i"]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_8qk6h"]
[ext_resource type="Texture2D" uid="uid://dv5g4v4iv5qxk" path="res://Images/background.jpg" id="1_cf3pl"]

[node name="Settings_Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qk6h")

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_cf3pl")

[node name="Volume_Label" type="Label" parent="."]
layout_mode = 0
offset_left = -108.0
offset_top = -72.0
offset_right = -49.0
offset_bottom = -46.0
text = "Volume"

[node name="Volume_Slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = -119.0
offset_top = -43.0
offset_right = 118.0
offset_bottom = -27.0
min_value = -40.0
max_value = 5.0

[node name="Resolution_Label" type="Label" parent="."]
layout_mode = 0
offset_left = -111.0
offset_top = 24.0
offset_right = -52.0
offset_bottom = 50.0
text = "Resolution"

[node name="Option_Button" type="OptionButton" parent="."]
layout_mode = 0
offset_left = -114.0
offset_top = 57.0
offset_right = 20.0
offset_bottom = 88.0
item_count = 3
selected = 1
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1152x648"
popup/item_1/id = 1
popup/item_2/text = "640 x 480"
popup/item_2/id = 2

[node name="Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = 177.0
offset_right = 24.0
offset_bottom = 208.0
text = "Menu"

[connection signal="changed" from="Volume_Slider" to="." method="_on_volume_slider_changed"]
[connection signal="value_changed" from="Volume_Slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="Option_Button" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
